fix: 补上漏掉的 />

--- a/lab3 客户端脚本编程/src/indefx.html
+++ b/lab3 客户端脚本编程/src/indefx.html
@@ -6,10 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>IKUN TV</title>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="../font/iconfont.css" />
 		<link
-			rel="stylesheet"
-			href="../font/iconfont.css"
-			<link
 			href="https://fonts.googlefonts.cn/css?family=Shadows+Into+Light"
 			rel="stylesheet"
 		/>
