fix: 一些小细节的修改

--- a/lab3 客户端脚本编程/src/indefx.html
+++ b/lab3 客户端脚本编程/src/indefx.html
@@ -11,6 +11,7 @@
 			href="https://fonts.googlefonts.cn/css?family=Shadows+Into+Light"
 			rel="stylesheet"
 		/>
+		<script src="./script.js"></script>
 	</head>
 	<body>
 		<header>
@@ -109,7 +110,7 @@
 		</main>
 		<div class="info-container">
 			<div class="description center-box">
-				<h3>Online User</h3>
+				<h3>Online iKun</h3>
 			</div>
 			<div class="profile-list" data-first="0">
 				<div class="arrow center-box">
@@ -165,6 +166,6 @@
 		<!-- <video controls>
 			<source src="../media/videos/你干嘛_原版.mp4" type="video/mp4" />
 		</video> -->
-		<script src="./script.js"></script>
+		<!-- <script src="./script.js"></script> -->
 	</body>
 </html>
